@@ -1,3 +1,10 @@
+Thu Jul 11 10:47:41 2002  Steve Huston  <shuston@riverace.com>
+
+        * performance-tests/Cubit/TAO/MT_Cubit/Task_Client.cpp (svc):
+          In calls the ACE_Thread_Manager::exit() and ACE_OS::thr_exit(),
+          correct argument to be ACE_THR_FUNC_RETURN, not a pointer.
+          Thanks to Johnny Willemsen for pointing this out.
+
 Thu Jul 11 09:23:12 2002   Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/RTCORBA/Profile_And_Endpoint_Selection/client.bor:
